# flowforge

./: .env.example  .gitignore  CHANGELOG.md  README.md  langgraph.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md  skills
.github/workflows/: ci.yml  nightly-deep-agent.yml  npm-publish.yml  pages.yml  pypi-publish.yml  release.yml
docs/plans/: api.md  task-1-deep-agents-enhancement.md
docs/reviews/: code-review-checkpoint-21.md  code-review-checkpoint-22.md  code-review-checkpoint-23.md  code-review-checkpoint-34.md  code-review-checkpoint-68.md
docs/security-audits/: security-audit-17.md  security-audit-18.md  security-audit-38.md
docs/site/: README.md  index.html  script.js  styles.css
docs/spec/: kawaii-calculator.md  my-feature.md  user-management-api.md
docs/specs/: flowforge-deep-agents-enhancement.md  flowforge-langgraph-agentic-development-pipeline.md
docs/test-reports/: test-report-32.md  test-report-41.md  test-report-63.md
docs/triage/: triage-report-111.md  triage-report-116.md  triage-report-122.md  triage-report-131.md  triage-report-33.md  triage-report-46.md  triage-report-77.md  triage-report-80.md
flowforge/adapters/: __init__.py  base.py  claude_code.py  codex.py  copilot.py
flowforge/auth/: __init__.py  copilot.py
flowforge/cli/: config.py  main.py
flowforge/config/: deep_agents.py  model_selection.py
flowforge/dag/: __init__.py  validator.py
flowforge/deep_agents/: __init__.py  adapters.py  errors.py  factory.py  secret_scanner.py  subagents.py  tools.py
flowforge/deep_agents/instructions/: auditor.md  clarifier.md  implementer.md  planner.md  reviewer.md  spec_author.md  tester.md  triager.md
flowforge/graph/: __init__.py  builder.py  loopback.py
flowforge/nodes/: _llm.py  _workspace.py  capability.py  clarification.py  code_review.py  issue_orchestrator.py  plan.py  security_audit.py  ship.py  spec.py  stubs.py  task_executor.py  task_runner.py  test_engineer.py
flowforge/persistence/: __init__.py  checkpointer.py  errors.py
flowforge/runner/: pipeline.py
flowforge/scheduler/: __init__.py  mutation.py  router.py
flowforge/state/: __init__.py  machine.py  models.py
flowforge/tools/: allowlist.py  policy.py
scripts/: integration_demo.py  run_pipeline.py  smoke_deep_agents.py
site/: index.html  script.js  styles.css
src/: __init__.py
src/adapters/: __init__.py  base.py  claude_code.py  codex.py  copilot.py  schemas.py
src/cli/: main.py
src/config/: model_selection.py
src/dag/: __init__.py
src/graph/: __init__.py  builder.py  loopback.py
src/nodes/: capability.py  code_review.py  idempotency.py  issue_orchestrator.py  plan.py  security_audit.py  ship.py  spec.py  stubs.py  test_engineer.py
src/persistence/: __init__.py  checkpointer.py
src/runner/: pipeline.py
src/scheduler/: __init__.py  revision_lock.py
src/shipping/: github.py
src/state/: __init__.py  errors.py
src/tools/: __init__.py  allowlist.py
tests/: conftest.py  factories.py  test_runner_pipeline.py  test_shipping_github.py
tests/cli/: test_deep_agent_flag.py
tests/config/: test_deep_agent_resolution.py
tests/contract/: test_legacy_vs_deep.py
tests/deep_agents/: __init__.py  test_adapters.py  test_factory.py  test_limits.py  test_package_smoke.py  test_secret_scanner.py  test_subagents.py  test_tools.py  test_trace.py
tests/e2e/: test_demo_run.py
tests/integration/: test_adapter_equivalence.py  test_fanout.py  test_graph_skeleton.py  test_implementer_ab_harness.py  test_loopback.py
tests/mocks/: __init__.py  external.py
tests/unit/: test_adapter_base.py  test_adapter_claude.py  test_adapter_codex.py  test_adapter_copilot.py  test_auth_copilot.py  test_builder.py  test_checkpointer.py  test_dag_mutation.py  test_factories.py  test_idempotency.py  test_model_selection.py  test_node_clarification_deep_agent.py  test_node_clarify.py  test_node_issue_orchestrator.py  test_node_issue_orchestrator_deep_agent.py  test_node_llm.py  test_node_plan.py  test_node_plan_deep_agent.py  test_node_review.py  test_node_review_deep_agent.py  test_node_security.py  test_node_security_deep_agent.py  test_node_ship.py  test_node_spec.py  test_node_spec_deep_agent.py  test_node_task.py  test_node_task_deep_agent.py  test_node_test_engineer.py  test_node_test_engineer_deep_agent.py  test_plan_mermaid.py  test_revision_lock.py  test_scheduler.py  test_state.py  test_state_machine.py  test_task_dispatcher.py  test_task_runner.py  test_task_runner_per_task.py  test_tool_policy.py
(+10 files in other folders)
