[project]
name = "flowforge"
version = "0.1.15"
description = "Multi-agent LangGraph framework for autonomous software development"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
keywords = ["langgraph", "agents", "automation", "software-development", "multi-agent"]
authors = [
    {name = "Shashank Mishra"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "langgraph>=0.4",
    "langgraph-sdk>=0.4",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "pydantic>=2.7",
    "click>=8.0",
]

[project.scripts]
flowforge = "src.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.0",
    "mypy>=2.0",
    "ruff>=0.15",
]

[project.urls]
Repository = "https://github.com/your-org/flowforge"
Documentation = "https://github.com/your-org/flowforge#readme"

[tool.mypy]
strict = true
disallow_any_generics = true
python_version = "3.12"
files = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "COM", "C4", "PT", "RET", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/state/models.py" = ["TCH003"]
"src/dag/validator.py" = ["TCH001"]
"src/scheduler/mutation.py" = ["TCH001"]
"src/tools/allowlist.py" = ["TCH001"]
"src/tools/policy.py" = ["TCH001"]
"src/adapters/base.py" = ["TCH001"]
"src/cli/*.py" = ["ANN", "TCH001"]
"src/runner/pipeline.py" = ["ANN", "TCH001"]
"src/shipping/github.py" = ["ANN", "TCH001"]
"scripts/*.py" = ["ANN", "TCH001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 70
show_missing = true
