[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swe-forge"
version = "0.1.51"
description = "Multi-agent LangGraph framework for autonomous software development"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
keywords = ["langgraph", "agents", "automation", "software-development", "multi-agent"]
authors = [
    {name = "Shashank Mishra"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Operating System :: OS Independent",
]
dependencies = [
    "langgraph>=0.4",
    "langgraph-sdk>=0.4",
    "langgraph-cli[inmem]>=0.1",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "pydantic>=2.7",
    "click>=8.0",
]

[project.scripts]
swe-forge = "flowforge.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["flowforge*"]
exclude = ["tests*", "scripts*", "docs*"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.0",
    "mypy>=2.0",
    "ruff>=0.15",
    "build>=1.2",
    "twine>=6.0",
]

[project.urls]
Homepage = "https://github.com/shashankswe2020-ux/flowforge"
Repository = "https://github.com/shashankswe2020-ux/flowforge"
Documentation = "https://github.com/shashankswe2020-ux/flowforge#readme"
Issues = "https://github.com/shashankswe2020-ux/flowforge/issues"

[tool.mypy]
strict = true
disallow_any_generics = true
python_version = "3.12"
files = ["flowforge"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "COM", "C4", "PT", "RET", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"flowforge/state/models.py" = ["TCH003"]
"flowforge/dag/validator.py" = ["TCH001"]
"flowforge/scheduler/mutation.py" = ["TCH001"]
"flowforge/tools/allowlist.py" = ["TCH001"]
"flowforge/tools/policy.py" = ["TCH001"]
"flowforge/adapters/base.py" = ["TCH001"]
"flowforge/cli/*.py" = ["ANN", "TCH001"]
"flowforge/runner/pipeline.py" = ["ANN", "TCH001"]
"flowforge/shipping/github.py" = ["ANN", "TCH001"]
"scripts/*.py" = ["ANN", "TCH001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["flowforge"]

[tool.coverage.report]
fail_under = 70
show_missing = true
